--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-numpy
-scikit-learn==1.0.2
+numpy==1.23.5scikit-learn==1.0.2
 pandas==1.3.5
-streamlit
+streamlit==1.39.0
 joblib
 shap
 category_encoders
