--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 setuptools>=65.5.0
 numpy==1.23.5
 scikit-learn==1.0.2
-pandas==1.3.5
+pandas==2.0.3
 streamlit==1.39.0
-joblib
-shap
-category_encoders
-xgboost
+joblib==1.3.2
+shap==0.46.0
+category_encoders==2.6.3
+xgboost==2.1.1
