--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numpy==1.23.5
-scikit-learn==1.0.2
-pandas==2.0.3
-streamlit==1.39.0
-joblib==1.3.2
-shap==0.46.0
-category_encoders==2.6.3
-xgboost==2.1.1
-setuptools>=57.5
+numpy
+scikit-learn
+pandas
+streamlit
+joblib
+shap
+category_encoders
+xgboost
+setuptools
 
