--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-numpy
-scikit-learn
-pandas
-streamlit
-joblib
-shap
-category_encoders
-xgboost
-setuptools
+numpy>=1.24.0
+scikit-learn>=1.2.0
+pandas>=2.0.0
+streamlit>=1.20.0
+joblib>=1.2.0
+shap>=0.41.0
+category_encoders>=2.6.0
+xgboost>=1.7.0
+setuptools>=67.0.0
+
 
