--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-numpy>=1.24.0
-scikit-learn>=1.2.0
-pandas>=2.0.0
-streamlit>=1.20.0
-joblib>=1.2.0
-shap>=0.41.0
-category_encoders>=2.6.0
-xgboost>=1.7.0
-setuptools>=67.0.0
+setuptools>=65.5.0
+numpy==1.23.5
+scikit-learn==1.0.2
+pandas==2.0.3
+streamlit==1.39.0
+joblib==1.3.2
+shap==0.46.0
+category_encoders==2.6.3
+xgboost==2.1.1
+
 
 
